fixed overflow issue when displaying note

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -97,7 +97,7 @@ header a {
 }
 
 .note-area {
-  width: 90%
+  width: 90%;
 }
 
 article {
@@ -201,11 +201,15 @@ i:hover {
 }
 
 .note-div {
-  width: 50%;
+  max-width: 600px;
+  max-height: 600px;
+  padding-bottom: 20px;
   background-color: #f2e9e1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .close-button {
@@ -218,8 +222,9 @@ i:hover {
 }
 
 .note-div p {
+  width: 500px;
   font-family: 'Courier Prime', monospace;
   color: #191724;
-  white-space: pre-wrap;
+  overflow-y: auto;
 }
 
